# novel_any

./: .novel_tools.db  ISSUES.md  README.md  SKILL.md  pyproject.toml
data/pipeline/: pipeline.db
novel_tools/: .gitignore  __init__.py  cli.py  config.py
novel_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
novel_tools/bible/: character.py  foreshadow.py  model.py  world.py
novel_tools/consistency/: emotion.py  names.py  structure.py  timeline.py
novel_tools/data/: hanzi_strokes.json
novel_tools/novel_tools.egg-info/: SOURCES.txt  requires.txt  top_level.txt
novel_tools/outline/: diff.py  parser.py
novel_tools/pipeline/: __init__.py  analyzer.py  db.py  improver.py  pipeline.py  playwright_scraper.py  researcher.py  review_scraper.py  reviewer.py  schema.sql  scraper.py  scraper_rules.py  validator.py
novel_tools/slop/: analyzer.py  cross_chapter.py  dictionary.py  scanner.py
novel_tools/stats/: pacing.py  rhythm.py  wordcount.py
novel_tools/style_lint/: __init__.py  rules.py
references/: biquge-limitations.md  biquge-scraping.md  douban-scraping.md  genre-trad.md  genre-web.md  github-scraper-research.md  github-ssh-setup.md  hanzi-stroke-generation.md  pipeline-design.md  pipeline-usage.md  playwright-wsl-setup.md  research-existing-tools.md  research-toolbox-enhancement.md  research-v2-enhancement.md  scraping-techniques.md  threshold-calibration.md  tool-validation-pattern.md  trxs-scraping.md
references/agents/: architect.md  character.md  consistency.md  narrator.md  polisher.md  (+1 more)
scripts/: install-playwright-deps.sh
(+916 files in other folders)
